--- a/src/pages/layouts/components/header/UI/lang/styles.module.scss
+++ b/src/pages/layouts/components/header/UI/lang/styles.module.scss
@@ -23,9 +23,9 @@
     left: 50%;
     transform: translateX(-50%);
     background-color: var(--Personal-colors-White);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
     z-index: 1;
-    border-radius: 5px;
+    border-radius: 12px;
     overflow: hidden;
 
     font-size: 14px;
