--- a/src/widgets/mainPages/services/UI/styles.module.scss
+++ b/src/widgets/mainPages/services/UI/styles.module.scss
@@ -3,6 +3,13 @@
   grid-auto-flow: row;
   row-gap: var(--row-gap-content-xl);
 
+  @media (min-width: 1220px) {
+    padding: 30px !important;
+    background: rgba(255, 255, 255, 0.5);
+    box-shadow: 0px 6px 10px 2px rgba(0, 0, 0, 0.1);
+    border-radius: 30px;
+  }
+
   @media (max-width: 992px) {
     row-gap: var(--row-gap-content-lg);
   }
