--- a/src/widgets/mainPages/whyChooseUs/UI/styles.module.scss
+++ b/src/widgets/mainPages/whyChooseUs/UI/styles.module.scss
@@ -57,5 +57,6 @@
         rgba(125, 117, 117, 0) 100%
       ),
       linear-gradient(90deg, #ff2f66 0%, rgba(254, 110, 48, 0.99) 100%);
+    border-radius: 20px;
   }
 }
