--- a/src/features/catalog/catalogCard/UI/styles.module.scss
+++ b/src/features/catalog/catalogCard/UI/styles.module.scss
@@ -3,8 +3,9 @@
   grid-auto-flow: row;
 
   border-radius: 15px;
-  box-shadow: inset 0px 0px 0px 0.5px var(--Containers);
+  box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
   background: var(--Personal-colors-White);
+  background: rgba(255, 255, 255, 0.5);
   position: relative;
 
   .channel {
@@ -177,6 +178,7 @@
           position: absolute;
           top: 10px;
           right: 10px;
+
           svg {
             width: 15px;
             height: 15px;
@@ -194,6 +196,7 @@
           font-style: normal;
           font-weight: 600;
           line-height: 0.75;
+
           @media (max-width: 768px) {
             font-size: 8px;
           }
@@ -301,6 +304,7 @@
       div {
         display: grid;
         justify-content: center;
+
         svg {
           width: auto;
           height: 16px;
@@ -397,6 +401,7 @@
         div {
           display: grid;
           justify-content: center;
+
           svg {
             width: auto;
             height: 16px;
@@ -455,6 +460,7 @@
     justify-content: center;
     align-items: center;
     padding: 10px;
+
     p {
       color: var(--Personal-colors-main);
       font-size: 10px;
