--- a/src/features/catalog/formatList/UI/styles.module.scss
+++ b/src/features/catalog/formatList/UI/styles.module.scss
@@ -41,13 +41,11 @@
   position: absolute;
   width: 100%;
   background-color: var(--Personal-colors-White);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
   padding: 5px;
   overflow: hidden;
   z-index: 1;
-
   border-radius: 10px;
-  border: 0.5px solid var(--Personal-colors-main);
 
   ul {
     display: grid;
