--- a/src/features/faq/information/UI/styles.module.scss
+++ b/src/features/faq/information/UI/styles.module.scss
@@ -60,8 +60,7 @@
       }
 
       &.active {
-        border: 1.5px solid var(--Personal-colors-main);
-        box-shadow: 0px 4px 16px 0px rgba(144, 71, 237, 0.18);
+        // box-shadow: inset 0 0 0 1px var(--Personal-colors-main);
         .arrow {
           background: var(--Gradients-Gradient-1) !important;
         }
