--- a/src/features/mainPages/workWithUs/UI/styles.module.scss
+++ b/src/features/mainPages/workWithUs/UI/styles.module.scss
@@ -5,6 +5,10 @@
   row-gap: 30px;
   z-index: 0;
 
+  @media (max-width: 768px) {
+    row-gap: 10px;
+  }
+
   .title {
     color: var(--Personal-colors-black);
     font-style: normal;
@@ -55,9 +59,9 @@
       width: 150px;
       height: 150px;
       flex-shrink: 0;
-      border-radius: 12px;
-      border: 1px solid var(--Personal-colors-main);
+      border-radius: 20px;
       background: var(--Personal-colors-White);
+      box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
 
       @media (max-width: 768px) {
         width: 100px;
