--- a/src/features/other/priceList/card/UI/styles.module.scss
+++ b/src/features/other/priceList/card/UI/styles.module.scss
@@ -2,15 +2,10 @@
   width: 100%;
   padding: 30px 20px 35px 20px;
   border-radius: 40px 40px 0px 40px;
-  background: rgba(255, 255, 255);
+  background: rgba(255, 255, 255, 0.9);
   text-align: center;
   align-items: center;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border: 2px solid var(--Personal-colors-Click);
-
-  // &:hover {
-  //   border: 2px solid var(--Personal-colors-main);
-  // }
+  box-shadow: 0px 2px 8px 2px rgba(0, 0, 0, 0.2);
 
   @media (max-width: 576px) {
     padding: 20px;
