--- a/src/pages/layouts/components/header/UI/styles.module.scss
+++ b/src/pages/layouts/components/header/UI/styles.module.scss
@@ -4,14 +4,17 @@
   justify-content: space-between;
   grid-auto-flow: column;
   align-items: center;
-  border-bottom: 0.5px solid rgba(0, 0, 0, 0.3);
   width: 100%;
   z-index: 10;
   position: fixed;
   top: 0;
   left: 0;
-  background: var(--Personal-colors-White);
+  // background: var(--Personal-colors-White);
+  background: rgba(255, 255, 255, 0.8);
   height: var(--header-height-xl);
+  border-radius: 0px 0px 25px 25px;
+  box-shadow: 0px 2px 5px 3px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
 
   @media (max-width: 992px) {
     height: var(--header-height-lg);
@@ -23,6 +26,7 @@
 
   @media (max-width: 576px) {
     height: var(--header-height-sm);
+    border-radius: 0px 0px 15px 15px;
   }
 
   @media (max-width: 375px) {
