--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -3,11 +3,22 @@
 @tailwind utilities;
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
 @import "reset.scss";
 @import "variables.scss";
 
+@font-face {
+  font-family: "TT Runs Trial";
+  src: url("/fonts/TT Runs Trial Variable Roman.ttf") format("truetype");
+}
+
+:root {
+  background: rgba(71, 114, 230, 1);
+}
+
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: "TT Runs Trial", "Montserrat Alternates", "Montserrat",
+    sans-serif;
 
   &::-webkit-scrollbar {
     display: none;
@@ -120,15 +131,15 @@ main {
   flex-direction: column;
   min-height: calc(100vh - 80px);
   width: 100vw;
-  background: url("/images/rootBg/DesktopBG.svg") repeat top center;
+  background: url("/images/rootBg/desktopBG.png") repeat top center;
   background-size: cover;
 
   @media (max-width: 992px) {
-    background: url("/images/rootBg/TabletBG.svg") repeat top center;
+    background: url("/images/rootBg/tabletBG.png") repeat top center;
   }
 
   @media (max-width: 576px) {
-    background: url("/images/rootBg/MobileBG.svg") repeat top center;
+    background: url("/images/rootBg/mobileBG.png") repeat top center;
   }
 
   header,
@@ -139,6 +150,7 @@ main {
   main {
     flex-grow: 1;
     overflow-y: auto;
+    // backdrop-filter: blur(20px);
   }
 }
 
@@ -366,7 +378,6 @@ main {
   margin: 0;
   padding: 20px 8px;
   z-index: 0;
-  // margin: 10px;
 }
 
 .slide__price {
