--- a/src/shared/ui/themeChanger/styles.module.scss
+++ b/src/shared/ui/themeChanger/styles.module.scss
@@ -116,7 +116,7 @@
       position: absolute;
       background-color: var(--Personal-colors-White);
       // border: 1px solid #ccc;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
       border-radius: 12px;
       padding: 5px;
       overflow: hidden;
