--- a/src/widgets/catalog/components/catalogSearch/UI/styles.module.scss
+++ b/src/widgets/catalog/components/catalogSearch/UI/styles.module.scss
@@ -13,9 +13,8 @@
   padding: 30px;
 
   border-radius: 20px;
-  border: 0.5px solid var(--Personal-colors-main);
-  background: var(--Personal-colors-White);
-  box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.15);
+  background: rgba(255, 255, 255, 0.7);
+  box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.15);
 }
 
 .recommendation {
