--- a/src/widgets/faq/UI/styles.module.scss
+++ b/src/widgets/faq/UI/styles.module.scss
@@ -47,7 +47,7 @@
     -webkit-text-fill-color: transparent;
     text-align: center;
     padding-bottom: 20px;
-    border-bottom: 1px solid var(--Card-separator);
+    border-bottom: 1px solid var(--Personal-colors-main);
 
     font-size: var(--font-size-title-main-xl);
 
