--- a/src/widgets/mainPages/calculateIncome/UI/styles.module.scss
+++ b/src/widgets/mainPages/calculateIncome/UI/styles.module.scss
@@ -1,7 +1,8 @@
 .calculate__wrapper {
   display: grid;
   grid-auto-flow: row;
-  background-image: url("/images/assets/turnkey.svg");
+  // background-image: url("/images/assets/turnkey.svg");
+  background: var(--Gradients-Gradient-7);
   background-size: cover;
   background-position: center;
   border-radius: 50px 50px 0 0;
@@ -133,7 +134,7 @@
       flex-shrink: 0;
       padding: calc(var(--margin-section-xl) / 2);
       border-radius: 50px 50px 0px 50px;
-      background: #fff;
+      background: rgba(255, 255, 255, 0.8);
       box-shadow: 0px 4px 18px 0px rgba(0, 0, 0, 0.25);
 
       @media (max-width: 992px) {
