--- a/src/features/other/priceList/buyTarif/UI/styles.module.scss
+++ b/src/features/other/priceList/buyTarif/UI/styles.module.scss
@@ -2,14 +2,19 @@
   width: 100%;
   font-size: 20px;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 500;
   line-height: normal;
   color: var(--Personal-colors-White);
   background: var(--Gradients-Gradient-1);
   cursor: pointer;
-  border-radius: 12px;
+  border-radius: 20px;
+  box-shadow: 0px 3px 5px 0px rgba(71, 114, 230, 0.6);
+  transition: all 300ms ease;
+
   &:hover {
-    background: #005aa5;
+    transform: scale(0.99);
+    box-shadow: 0px 3px 10px 1px rgba(71, 114, 230, 0.6);
+    transition: all 300ms ease;
   }
 }
 
@@ -21,7 +26,8 @@
     width: 530px;
     position: fixed;
     top: 0;
-    right: 0; /* Скрываем за пределами экрана */
+    right: 0;
+    /* Скрываем за пределами экрана */
     background-color: var(--Personal-colors-White);
     border: 1px solid var(--black-10);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -196,7 +202,8 @@
     position: absolute;
     width: 100%;
     height: 2px;
-    background-color: #333; /* Цвет линий крестика */
+    background-color: #333;
+    /* Цвет линий крестика */
     top: 50%;
     left: 0;
     transform: translateY(-50%);
@@ -234,6 +241,7 @@
       display: grid;
       justify-content: center;
       align-items: center;
+
       svg {
         width: 48px;
         height: 48px;
@@ -297,6 +305,7 @@
       display: grid;
       justify-content: center;
       align-items: center;
+
       svg {
         width: 15px;
         height: 15px;
@@ -379,6 +388,7 @@
           font-style: normal;
           font-weight: 600;
         }
+
         span {
           color: #a3a0a0;
           font-size: 12px;
@@ -470,6 +480,7 @@
       align-items: center;
       column-gap: 10px;
       justify-content: center;
+
       p {
         color: rgba(0, 0, 0, 0.7);
         font-size: 12px;
@@ -477,6 +488,7 @@
         font-weight: 500;
         line-height: normal;
       }
+
       span {
         color: var(--Personal-colors-black);
         font-size: 16px;
