--- a/src/features/cart/addMore/UI/styles.module.scss
+++ b/src/features/cart/addMore/UI/styles.module.scss
@@ -1,12 +1,15 @@
 .button {
   padding: 10px;
-  font-size: 16px;
+  font-size: var(--font-size-text-primary-xl);
   font-style: normal;
   font-weight: 600;
   line-height: normal;
   color: var(--Personal-colors-main);
   background: var(--Personal-colors-White);
   border-radius: 10px;
-  border: 1px solid var(--Personal-colors-main);
-  height: 100%;
+  box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.2);
+
+  @media (max-width: 576px) {
+    font-size: var(--font-size-sm-text-primary);
+  }
 }
