--- a/src/widgets/cart/components/cartList/UI/styles.module.scss
+++ b/src/widgets/cart/components/cartList/UI/styles.module.scss
@@ -24,6 +24,7 @@
     grid-auto-flow: column;
     align-items: center;
     justify-content: space-between;
+    gap: 10px;
 
     @media (max-width: 576px) {
       justify-content: initial;
@@ -33,7 +34,6 @@
 
     .buttons {
       display: grid;
-      // grid-auto-flow: column;
       grid-template: 1fr / 1fr 1fr;
       align-items: center;
       column-gap: 10px;
@@ -49,6 +49,14 @@
       svg {
         height: 40px;
         width: auto;
+
+        @media (max-width: 768px) {
+          height: 30px;
+        }
+      }
+
+      @media (max-width: 576px) {
+        column-gap: 15px;
       }
 
       p {
@@ -56,23 +64,14 @@
         font-style: normal;
         font-weight: 600;
         line-height: normal;
-
-        font-size: var(--font-size-title-main-xl);
+        font-size: var(--row-gap-title-xl);
 
         @media (max-width: 992px) {
-          font-size: var(--font-size-title-main-lg);
+          font-size: var(--row-gap-title-lg);
         }
 
         @media (max-width: 768px) {
-          font-size: var(--font-size-title-main-md);
-        }
-
-        @media (max-width: 576px) {
-          font-size: var(--font-size-title-main-sm);
-        }
-
-        @media (max-width: 375px) {
-          font-size: var(--font-size-title-main-xs);
+          font-size: var(--row-gap-title-md);
         }
       }
     }
