--- a/src/pages/layouts/components/header/UI/dropdownMenu/UI/styles.module.scss
+++ b/src/pages/layouts/components/header/UI/dropdownMenu/UI/styles.module.scss
@@ -4,7 +4,10 @@
   .menu {
     &__content {
       display: grid;
-      grid-auto-flow: row;
+      grid-template-rows: repeat(2, min-content);
+      grid-template-columns: 1fr;
+      background-color: var(--Personal-colors-White);
+      height: 100vh;
     }
 
     &__accordion {
@@ -19,7 +22,7 @@
     position: fixed;
     top: 0;
     left: 0; /* Скрываем за пределами экрана */
-    background-color: var(--Personal-colors-White);
+
     // border: 1px solid var(--black-10);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     z-index: 10;
@@ -31,6 +34,7 @@
     &__switcher {
       display: grid;
       grid-auto-flow: row;
+
       // justify-content: center;
 
       &__row {
