--- a/src/widgets/catalog/components/catalogList/parametersFilter/UI/styles.module.scss
+++ b/src/widgets/catalog/components/catalogList/parametersFilter/UI/styles.module.scss
@@ -38,7 +38,7 @@
   row-gap: 15px;
   width: 100%;
   background: #fff;
-  border-radius: 20px 20px 0 0;
+  height: 100vh !important;
 
   .top {
     display: grid;
@@ -72,8 +72,8 @@
   grid-auto-flow: row;
   row-gap: 30px;
   padding: 30px 0;
-
   border-radius: 20px;
+  // overflow-y: scroll;
 }
 
 .recommendation {
