--- a/src/features/catalog/catalogCard/UI/styles.module.scss
+++ b/src/features/catalog/catalogCard/UI/styles.module.scss
@@ -26,6 +26,10 @@
       font-weight: 600;
       line-height: normal;
       word-break: break-word;
+
+      @media (max-width: 576px) {
+        font-weight: 500;
+      }
     }
 
     &__top {
@@ -154,6 +158,10 @@
             font-style: normal;
             font-weight: 600;
             line-height: normal;
+
+            @media (max-width: 576px) {
+              font-weight: 500;
+            }
           }
 
           .category {
@@ -162,6 +170,10 @@
             font-style: normal;
             font-weight: 500;
             line-height: normal;
+
+            @media (max-width: 576px) {
+              font-weight: 400;
+            }
           }
         }
       }
@@ -423,6 +435,10 @@
           font-style: normal;
           font-weight: 600;
           line-height: 0.75;
+
+          @media (max-width: 576px) {
+            font-size: 12px;
+          }
         }
 
         span {
