--- a/src/features/channel/channelCardMenu/UI/styles.module.scss
+++ b/src/features/channel/channelCardMenu/UI/styles.module.scss
@@ -9,7 +9,7 @@
   grid-auto-flow: row;
   position: absolute;
   background-color: var(--Personal-colors-White);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.2);
   z-index: 1;
   min-width: 200px;
   border-radius: 7px;
