--- a/src/features/mainPages/accommList/accommCard/UI/styles.module.scss
+++ b/src/features/mainPages/accommList/accommCard/UI/styles.module.scss
@@ -34,6 +34,10 @@
       font-weight: 600;
       line-height: normal;
       list-style: disc;
+
+      @media (max-width: 576px) {
+        font-weight: 500;
+      }
     }
   }
 
