--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -393,41 +393,9 @@ main {
 }
 
 .border__gradient {
-  border-radius: 12px;
-  box-shadow: inset 0px 0px 0px 1.5px var(--Personal-colors-main);
-  background-color: #fff;
-  // background: none;
-  // position: relative;
-
-  // &:before {
-  //   content: "";
-  //   position: absolute;
-  //   top: 0;
-  //   right: 0;
-  //   bottom: 0;
-  //   left: 0;
-  //   z-index: var(--zIndexTop);
-  //   margin: var(--borderMass);
-
-  //   border-radius: calc(var(--borderRadius) - var(--borderMass));
-  //   /* !importanté */
-  //   background: var(--Personal-colors-White);
-  // }
-
-  // &:after {
-  //   content: "";
-  //   position: absolute;
-  //   top: 0;
-  //   right: 0;
-  //   bottom: 0;
-  //   left: 0;
-  //   z-index: var(--zIndexBottom);
-  //   z-index: -2;
-  //   border-radius: var(--borderRadius);
-  //   /* !importanté */
-  //   background: var(--Gradients-Gradient-1);
-  //   background: var(--gradient);
-  // }
+  border-radius: 20px;
+  box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.2);
+  background: rgba(255, 255, 255, 0.8);
 }
 
 @layer base {
