--- a/src/widgets/catalog/components/catalogList/parametersFilter/UI/styles.module.scss
+++ b/src/widgets/catalog/components/catalogList/parametersFilter/UI/styles.module.scss
@@ -20,7 +20,7 @@
 
 .close {
   position: absolute;
-  top: 20px;
+  top: 0px;
   right: 10px;
 
   div {
@@ -43,7 +43,7 @@
   .top {
     display: grid;
     text-align: center;
-    padding: 25px;
+    // padding: 25px;
     border-bottom: 1px solid #d9d9d9;
     position: relative;
 
@@ -59,8 +59,6 @@
 }
 
 .wrapper {
-  position: sticky;
-  top: 0;
   display: grid;
   grid-auto-flow: row;
   row-gap: 10px;
@@ -73,7 +71,6 @@
   row-gap: 30px;
   padding: 30px 0;
   border-radius: 20px;
-  // overflow-y: scroll;
 }
 
 .recommendation {
