--- a/src/widgets/channel/myChannels/activeChannels/card/UI/styles.module.scss
+++ b/src/widgets/channel/myChannels/activeChannels/card/UI/styles.module.scss
@@ -2,12 +2,9 @@
   display: grid;
   grid-auto-flow: row;
   row-gap: 20px;
-  border-radius: 12px;
-  box-shadow: inset 0px 0px 0px 1px var(--Personal-colors-main);
   padding-top: 20px;
   width: 100%;
   position: relative;
-  background-color: var(--Personal-colors-White);
 
   .card {
     display: grid;
@@ -186,7 +183,7 @@
 
           padding: 8px 20px;
           border-radius: 8px;
-          border: 1px solid var(--Personal-colors-main);
+          box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.2);
         }
       }
 
@@ -216,7 +213,6 @@
     column-gap: 10px;
     align-items: center;
     justify-content: center;
-    padding: 11px 0;
     width: 100%;
 
     color: var(--Personal-colors-White);
@@ -225,8 +221,9 @@
     font-weight: 500;
     line-height: normal;
     line-height: 0.75;
-    border-radius: 12px;
     background: var(--Gradients-Gradient-1);
+    padding: 12px 0;
+    border-radius: 0px 0px 20px 20px;
   }
 
   .platform__events {
