--- a/src/widgets/communication/chat/styles.module.scss
+++ b/src/widgets/communication/chat/styles.module.scss
@@ -52,6 +52,10 @@
         color: var(--Personal-colors-main);
         padding: 25px 0;
         text-align: center;
+
+        @media (max-width: 576px) {
+          font-weight: 500;
+        }
       }
 
       .filter {
@@ -65,6 +69,10 @@
           font-weight: 600;
           line-height: 0.75;
           padding: 10px 0;
+
+          @media (max-width: 576px) {
+            font-weight: 500;
+          }
         }
       }
     }
