--- a/src/widgets/project/manager/UI/managerNewProject/card/UI/styles.module.scss
+++ b/src/widgets/project/manager/UI/managerNewProject/card/UI/styles.module.scss
@@ -1,8 +1,6 @@
 .wrapper {
   display: grid;
   grid-auto-flow: row;
-  // border-radius: 12px;
-  // box-shadow: inset 0px 0px 0px 1.5px var(--Personal-colors-main);
   padding-top: 15px;
 
   .card {
@@ -159,7 +157,7 @@
   column-gap: 10px;
   align-items: center;
   justify-content: center;
-  padding: 11px 0;
+  padding: 12px 0;
   width: 100%;
 
   color: var(--Personal-colors-White);
@@ -168,6 +166,6 @@
   font-weight: 500;
   line-height: normal;
   line-height: 0.75;
-  border-radius: 12px;
+  border-radius: 0px 0px 16px 16px;
   background: var(--Gradients-Gradient-1);
 }
