--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -149,7 +149,7 @@ main {
 
   main {
     flex-grow: 1;
-    overflow-y: auto;
+    // overflow-y: auto;
     // backdrop-filter: blur(20px);
   }
 }
