--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -38,6 +38,11 @@
     #8e54e9 23.91%,
     #4772e6 75.06%
   );
+  --Gradients-Gradient-9: linear-gradient(
+    45deg,
+    rgba(71, 114, 230, 0.8) 23.91%,
+    rgba(142, 84, 233, 0.8) 75.06%
+  );
 
   --Personal-colors-black: #000;
   --Personal-colors-main: #4772e6;
