--- a/src/features/catalog/catalogCard/UI/styles.module.scss
+++ b/src/features/catalog/catalogCard/UI/styles.module.scss
@@ -26,6 +26,10 @@
       font-weight: 600;
       line-height: normal;
       word-break: break-word;
+      overflow: hidden;
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 3;
 
       @media (max-width: 576px) {
         font-weight: 500;
