--- a/src/features/other/selectOptions/UI/styles.module.scss
+++ b/src/features/other/selectOptions/UI/styles.module.scss
@@ -120,6 +120,10 @@
       padding: 10px;
       border: 1px solid var(--Inside-container);
       height: 30px;
+
+      @media (max-width: 576px) {
+        padding: 6px;
+      }
     }
   }
 
@@ -179,6 +183,10 @@
       justify-content: space-between;
       cursor: pointer;
       padding: 10px;
+
+      @media (max-width: 576px) {
+        padding: 6px;
+      }
 
       span {
         white-space: nowrap;
