--- a/src/shared/ui/themeChanger/styles.module.scss
+++ b/src/shared/ui/themeChanger/styles.module.scss
@@ -65,6 +65,10 @@
       background: var(--Personal-colors-White);
       color: #a3a0a0;
 
+      @media (max-width: 576px) {
+        padding: 12px 15px;
+      }
+
       div {
         display: grid;
         grid-auto-flow: column;
