--- a/src/widgets/cart/components/createPost/UI/styles.module.scss
+++ b/src/widgets/cart/components/createPost/UI/styles.module.scss
@@ -4,18 +4,35 @@
   justify-content: center;
   padding: 30px;
   border-radius: 20px;
-  background: var(--Personal-colors-White);
+  background: rgba(255, 255, 255, 0.7);
+  backdrop-filter: blur(20px);
   box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.2);
+
+  //sticky
+  position: sticky;
+  top: 100px;
 
   @media (max-width: 992px) {
     grid-auto-flow: column;
     column-gap: 40px;
     padding: 15px;
+    margin: 0px 20px;
+
+    //sticky
+    position: sticky;
+    bottom: 30px;
   }
 
   @media (max-width: 768px) {
     justify-content: initial;
     padding: 10px;
+  }
+
+  @media (max-width: 576px) {
+    border-radius: 10px;
+    padding: 15px;
+    bottom: 10px;
+    margin: 0px -15px;
   }
 
   .icon {
@@ -113,6 +130,7 @@
   .finnaly {
     display: grid;
     grid-auto-flow: row;
+
     @media (max-width: 992px) {
       align-content: space-between;
     }
@@ -123,7 +141,8 @@
     }
 
     @media (max-width: 576px) {
-      column-gap: 15px;
+      grid-template: 1fr 1fr / 1fr;
+      gap: 15px;
     }
 
     &__text {
