--- a/src/widgets/catalog/components/catalogSearch/UI/styles.module.scss
+++ b/src/widgets/catalog/components/catalogSearch/UI/styles.module.scss
@@ -1,9 +1,11 @@
 .wrapper {
-  position: sticky;
-  top: 0;
   display: grid;
   grid-auto-flow: row;
   row-gap: 10px;
+
+  //sticky
+  position: sticky;
+  top: 100px;
 }
 
 .options {
