--- a/src/widgets/mainPages/calculateIncome/UI/styles.module.scss
+++ b/src/widgets/mainPages/calculateIncome/UI/styles.module.scss
@@ -238,7 +238,8 @@
         }
 
         @media (max-width: 576px) {
-          border-radius: 35px;
+          padding: 20px;
+          border-radius: 25px;
         }
       }
     }
