--- a/src/entities/channel/ui/information/rate/UI/styles.module.scss
+++ b/src/entities/channel/ui/information/rate/UI/styles.module.scss
@@ -1,85 +1,94 @@
 .wrapper {
   display: grid;
-  grid-template: 1fr / max-content 1fr;
-  column-gap: 80px;
-  align-items: start;
-  padding: 30px;
-  border-radius: 12px;
-  background: var(--Personal-colors-White);
-  box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.16);
+  grid-auto-flow: row;
+  row-gap: 30px;
 
-  .left {
+  .title {
+    color: var(--Personal-colors-black);
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 1;
+  }
+
+  .card {
     display: grid;
+    grid-template: 1fr / max-content 1fr;
+    column-gap: 80px;
     align-items: start;
+    padding: 30px;
+    border-radius: 12px;
+    background: var(--Personal-colors-White);
+    box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.16);
 
-    .rate__wrapper {
+    .left {
       display: grid;
-      grid-auto-flow: column;
-      column-gap: 10px;
+      align-items: start;
 
-      p {
-        color: var(--Personal-colors-black);
-        font-size: 44px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: 1;
-      }
-
-      .rate {
+      .rate__wrapper {
         display: grid;
-        grid-auto-flow: row;
-        row-gap: 10px;
-        align-items: center;
+        grid-auto-flow: column;
+        column-gap: 10px;
 
-        span {
+        p {
           color: var(--Personal-colors-black);
-          font-size: 12px;
+          font-size: 44px;
           font-style: normal;
-          font-weight: 400;
+          font-weight: 600;
           line-height: 1;
         }
 
-        // svg{
-        //     width: 90px;
-        //     height: auto;
-        // }
-      }
-    }
-  }
+        .rate {
+          display: grid;
+          grid-auto-flow: row;
+          row-gap: 10px;
+          align-items: center;
 
-  .right {
-    display: grid;
-    grid-template: 1fr / max-content 1fr;
-    column-gap: 20px;
-
-    .rate_type {
-      display: grid;
-      grid-auto-flow: row;
-      row-gap: 10px;
-
-      span {
-        color: var(--Text-sample);
-        text-align: right;
-        font-size: 12px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 1;
-        cursor: pointer;
-
-        &.active {
-          color: var(--Personal-colors-main);
+          span {
+            color: var(--Personal-colors-black);
+            font-size: 12px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 1;
+          }
         }
       }
     }
 
-    .sliders {
+    .right {
       display: grid;
-      grid-auto-flow: row;
-      align-content: center;
-      row-gap: 16px;
+      grid-template: 1fr / max-content 1fr;
+      column-gap: 20px;
 
-      .slider {
-        cursor: pointer;
+      .rate_type {
+        display: grid;
+        grid-auto-flow: row;
+        row-gap: 10px;
+
+        span {
+          color: var(--Text-sample);
+          text-align: right;
+          font-size: 12px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: 1;
+          cursor: pointer;
+
+          &.active {
+            color: var(--Personal-colors-main);
+          }
+        }
+      }
+
+      .sliders {
+        display: grid;
+        grid-auto-flow: row;
+        align-content: center;
+        row-gap: 16px;
+
+        .slider {
+          cursor: pointer;
+        }
       }
     }
   }
