--- a/src/entities/channel/ui/information/reviewCard/UI/styles.module.scss
+++ b/src/entities/channel/ui/information/reviewCard/UI/styles.module.scss
@@ -2,7 +2,8 @@
   padding: 15px 25px;
   height: 225px;
   background: var(--Personal-colors-White);
-  border-bottom: 1px solid var(--black-20);
+  box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 15px;
 
   .review {
     display: grid;
