--- a/src/entities/wallet/ui/history/UI/styles.module.scss
+++ b/src/entities/wallet/ui/history/UI/styles.module.scss
@@ -1,15 +1,18 @@
 .wrapper {
   display: grid;
-  grid-template:
-    1fr / minmax(10vw, 15vw) minmax(10vw, 15vw) minmax(10vw, 15vw) minmax(
-      10vw,
-      15vw
-    )
-    minmax(20vw, 20vw);
+  // grid-template:
+  //   1fr / minmax(10vw, 15vw) minmax(10vw, 15vw) minmax(10vw, 15vw) minmax(
+  //     10vw,
+  //     15vw
+  //   )
+  //   minmax(20vw, 20vw);
+  grid-template: 1fr / 1fr 1fr 1fr 1fr 1.5fr;
   align-items: center;
-  border-bottom: 1px solid var(--Containers);
-  padding: 20px;
+  box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
+  padding: 10px 20px;
   column-gap: 15px;
+  background: rgba(255, 255, 255, 0.8);
+  border-radius: 15px;
 
   @media (max-width: 992px) {
     padding: 10px 15px;
@@ -49,16 +52,16 @@
 .wrapper__card {
   display: grid;
   grid-auto-flow: row;
-  padding: 0 10px;
-  border-radius: 4px;
-  background: #fff;
-  box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.12);
+  padding: 0 20px;
+  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.8);
+  box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
 
   .top {
     display: grid;
     grid-auto-flow: column;
     justify-content: space-between;
-    padding: 10px 20px 10px 0;
+    padding: 10px 0;
     border-bottom: 1px solid #d9d9d9;
 
     .left {
