--- a/src/entities/wallet/ui/history/skeleton/styles.module.scss
+++ b/src/entities/wallet/ui/history/skeleton/styles.module.scss
@@ -1,16 +1,18 @@
 .card {
   display: grid;
-  height: 95px;
-  grid-template:
-    1fr / minmax(10vw, 15vw) minmax(10vw, 15vw) minmax(10vw, 15vw) minmax(
-      10vw,
-      15vw
-    )
-    minmax(20vw, 20vw);
+  height: 75px;
+  // grid-template:
+  //   1fr / minmax(10vw, 15vw) minmax(10vw, 15vw) minmax(10vw, 15vw) minmax(
+  //     10vw,
+  //     15vw
+  //   )
+  //   minmax(20vw, 20vw);
+  grid-template: 1fr / 1fr 1fr 1fr 1fr 1.5fr;
   align-items: center;
-  border-bottom: 1px solid var(--Containers);
   padding: 20px;
   column-gap: 15px;
+  box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 15px;
 
   @media (max-width: 992px) {
     padding: 10px 15px;
@@ -21,10 +23,12 @@
 
 .card__xs {
   height: 165px;
-  padding: 10px;
+  padding: 10px 20px;
   display: grid;
   grid-auto-flow: row;
   row-gap: 20px;
+  box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 20px;
 
   .top {
     display: grid;
