--- a/src/features/wallet/barHistory/UI/styles.module.scss
+++ b/src/features/wallet/barHistory/UI/styles.module.scss
@@ -1,14 +1,15 @@
 .wrapper {
   display: grid;
-  grid-template:
-    1fr / minmax(10vw, 15vw) minmax(10vw, 15vw) minmax(10vw, 15vw) minmax(
-      10vw,
-      15vw
-    )
-    minmax(20vw, 20vw);
+  // grid-template:
+  //   1fr / minmax(10vw, 15vw) minmax(10vw, 15vw) minmax(10vw, 15vw) minmax(
+  //     10vw,
+  //     15vw
+  //   )
+  //   minmax(20vw, 20vw);
+  grid-template: 1fr / 1fr 1fr 1fr 1fr 1.5fr;
   align-items: center;
   border-radius: 12px;
-  border: 1px solid var(--Containers);
+  box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
   background: var(--Personal-colors-White);
   // padding: 10px 0;
   font-weight: 600;
