--- a/src/widgets/channel/channelInfo/UI/information/reviews/UI/styles.module.scss
+++ b/src/widgets/channel/channelInfo/UI/information/reviews/UI/styles.module.scss
@@ -3,11 +3,22 @@
   grid-auto-flow: row;
   row-gap: 30px;
 
-  .title {
-    color: var(--Personal-colors-black);
-    font-size: 28px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 1;
+  .reviews__wrapper {
+    display: grid;
+    grid-auto-flow: row;
+    row-gap: 10px;
+  }
+
+  .show_more {
+    button {
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+      width: 100%;
+      color: var(--Personal-colors-main);
+      background: #fff;
+      box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
+    }
   }
 }
