--- a/src/widgets/wallet/history/UI/styles.module.scss
+++ b/src/widgets/wallet/history/UI/styles.module.scss
@@ -31,7 +31,7 @@
 }
 
 .top {
-  border-bottom: 2px solid #d9d9d9;
+  border-bottom: 2px solid var(--Personal-colors-main);
   padding-bottom: var(--row-gap-title-xl);
 
   @media (max-width: 992px) {
@@ -39,6 +39,7 @@
   }
 
   @media (max-width: 768px) {
+    text-align: center;
     padding-bottom: var(--row-gap-title-md);
   }
 
@@ -51,7 +52,7 @@
   }
 
   p {
-    color: var(--Personal-colors-black);
+    color: var(--Personal-colors-main);
     font-style: normal;
     font-weight: 600;
     line-height: normal;
@@ -79,11 +80,8 @@
   .cards__list {
     display: grid;
     grid-auto-flow: row;
-    background: #fff;
+    row-gap: 10px;
     align-items: stretch;
-    border-radius: 18px;
-    border: 1px solid var(--Containers);
-    box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.09);
 
     @media (max-width: 768px) {
       row-gap: 10px;
@@ -94,19 +92,15 @@
     }
 
     .show_more {
-      div {
-        width: 100%;
+      button {
         font-size: 14px;
         font-style: normal;
         font-weight: 600;
         line-height: normal;
+        width: 100%;
         color: var(--Personal-colors-main);
-        background: transparent;
         background: #fff;
-
-        @media (max-width: 768px) {
-          box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.09);
-        }
+        box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
       }
     }
   }
