--- a/src/features/other/selectOptions/UI/styles.module.scss
+++ b/src/features/other/selectOptions/UI/styles.module.scss
@@ -201,6 +201,11 @@
       &.filter {
         column-gap: 5px;
         justify-content: start;
+
+        @media (max-width: 576px) {
+          justify-content: center;
+          align-items: center;
+        }
       }
 
       &:hover {
