--- a/src/widgets/catalog/components/catalogList/parametersFilter/UI/styles.module.scss
+++ b/src/widgets/catalog/components/catalogList/parametersFilter/UI/styles.module.scss
@@ -7,7 +7,7 @@
   border-radius: 10px;
   border: 1px solid var(--black-20, #ccc);
   background: #fff;
-  height: 30px;
+  height: 100%;
 
   p {
     color: var(--black-65);
