--- a/src/features/other/priceList/buyTarif/UI/styles.module.scss
+++ b/src/features/other/priceList/buyTarif/UI/styles.module.scss
@@ -251,8 +251,8 @@
 
     .files__text {
       display: grid;
-      grid-auto-flow: column;
-      column-gap: 10px;
+      grid-auto-flow: row;
+      gap: 10px;
       align-items: center;
       align-content: center;
 
@@ -294,7 +294,7 @@
 
   .bottom {
     display: grid;
-    grid-auto-flow: column;
+    grid-template: 1fr / auto 1fr;
     column-gap: 10px;
     align-items: center;
     justify-content: start;
@@ -316,14 +316,13 @@
     &__column {
       display: grid;
       grid-auto-flow: row;
-      row-gap: 10px;
+      row-gap: 5px;
 
       p {
         color: var(--Sub-text);
         font-size: 8px;
         font-style: normal;
         font-weight: 400;
-        line-height: 1;
       }
 
       span {
@@ -331,7 +330,6 @@
         font-size: 8px;
         font-style: normal;
         font-weight: 500;
-        line-height: 1;
       }
 
       .file {
@@ -343,7 +341,7 @@
       .size {
         display: grid;
         grid-auto-flow: column;
-        justify-content: start;
+        justify-content: center;
         column-gap: 5px;
       }
     }
