--- a/src/widgets/cart/components/recommendationList/UI/styles.module.scss
+++ b/src/widgets/cart/components/recommendationList/UI/styles.module.scss
@@ -18,17 +18,40 @@
 
   p {
     color: var(--Personal-colors-black);
-    font-size: 24px;
+    font-size: var(--font-size-subtitle-secondary-xl);
     font-style: normal;
     font-weight: 600;
     line-height: normal;
+
+    @media (max-width: 576px) {
+      font-weight: 500;
+      font-size: var(--font-size-subtitle-secondary-sm);
+    }
+
+    @media (max-width: 375px) {
+      font-size: var(--font-size-subtitle-secondary-xs);
+    }
   }
 
   button {
     color: rgba(0, 0, 0, 0.6);
-    font-size: 14px;
-    font-style: normal;
+    font-size: var(--font-size-xl-button-text);
     font-weight: 600;
-    line-height: normal;
+    color: var(--Personal-colors-main);
+    display: grid;
+    grid-auto-flow: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+
+    @media (max-width: 576px) {
+      font-size: var(--font-size-sm-button-text);
+    }
+
+    svg {
+      width: auto;
+      height: auto;
+      stroke: var(--Personal-colors-main);
+    }
   }
 }
