--- a/src/features/mainPages/customer/card/UI/styles.module.scss
+++ b/src/features/mainPages/customer/card/UI/styles.module.scss
@@ -3,17 +3,12 @@
   grid-template: 0.3fr 1fr / 1fr;
   align-content: space-between;
   align-items: start;
-  // border-radius: 12px 12px 0px 12px;
-  // background: linear-gradient(
-  //   90deg,
-  //   rgba(71, 113, 230, 0.1) 0.03%,
-  //   rgba(142, 84, 233, 0.1) 100.36%
-  // );
   padding: 20px;
 
   border-radius: 20px;
   background: var(--Personal-colors-White, #fff);
   box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.19);
+  cursor: pointer;
 
   .customer__row {
     display: grid;
