--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -46,6 +46,7 @@
 
   --Personal-colors-black: #000;
   --Personal-colors-main: #4772e6;
+  --Personal-colors-main2: #8e54e9;
   --Personal-colors-White: #fff;
   --Personal-colors-Green: #48d23c;
   --Personal-colors-green-hover: #6bda62;
@@ -129,6 +130,7 @@
   --font-size-xl-button-text: 14px;
 
   --margin-section-xl: 100px;
+  --cards-list-height: 100vh;
 
   /* Large (LG) */
   --font-size-title-main-lg: 36px;
