--- a/src/features/channel/selectSymbols/UI/styles.module.scss
+++ b/src/features/channel/selectSymbols/UI/styles.module.scss
@@ -34,23 +34,15 @@
 
   .slider {
     display: grid;
-    grid-auto-flow: row;
-    row-gap: 15px;
+    grid-template: 1fr / 1fr 10fr 1fr;
+    column-gap: 15px;
 
-    .position {
-      display: grid;
-      grid-auto-flow: column;
-      justify-content: space-between;
-      align-items: center;
-      text-align: center;
-
-      p {
-        color: var(--Personal-colors-black);
-        font-size: 20px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 0.75;
-      }
+    p {
+      color: var(--Personal-colors-black);
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 0.75;
     }
   }
 }
