--- a/src/shared/ui/MyBtn/styles.module.scss
+++ b/src/shared/ui/MyBtn/styles.module.scss
@@ -17,6 +17,8 @@
   border-radius: 12px;
   transition: all 300ms ease;
 
+  box-shadow: 0px 3px 5px 0px rgba(71, 114, 230, 0.6);
+
   &__blue {
     color: var(--Personal-colors-White);
     background: var(--Gradients-Gradient-1);
@@ -30,7 +32,7 @@
 
   &__white {
     color: var(--Personal-colors-main);
-    border: 1px solid var(--Personal-colors-main);
+    // border: 1px solid var(--Personal-colors-main);
     background: var(--Personal-colors-White);
 
     &:hover {
