--- a/src/widgets/project/manager/UI/managerProject/UI/styles.module.scss
+++ b/src/widgets/project/manager/UI/managerProject/UI/styles.module.scss
@@ -1,5 +1,13 @@
 .wrapper {
-  display: grid;
-  grid-auto-flow: row;
-  row-gap: 10px;
+  min-height: var(--cards-list-height);
+
+  .cards {
+    display: grid;
+    grid-auto-flow: row;
+    row-gap: 10px;
+
+    .show_more {
+      margin: 10px auto;
+    }
+  }
 }
